Some polishing for the talk about ui-lib

--- a/presentations/react-ui-lib/body.html
+++ b/presentations/react-ui-lib/body.html
@@ -19,25 +19,71 @@
     </p>
   </section>
 
-  <section>
-    <h3>You might not need UI library if</h3>
 
-    <ul>
-      <li>It requires <strong>deep</strong> customization</li>
-      <li class="fragment fade-up">You need only one single component from the library and will not need more </li>
-      <li class="fragment fade-up">The component you needed is really very simple</li>
-    </ul>
+  <section>
+    <h3>
+      Downsides of using UI lib
+    </h3>
   </section>
 
   <section>
-    <h3>However, you should reconsider your decision if you need</h3>
+    <h3>
+      Hard to fix bugs
+    </h3>
 
-    <ul>
-      <li>Grid - making your own grid is a huge pain</li>
-      <li class="fragment fade-up">Datepicker - working with date is a huge pain</li>
-      <li class="fragment fade-up">Modals - accessibility will kill you</li>
-      <li class="fragment fade-up">Specific selects - accessibility, mobiles, etc.</li>
-    </ul>
+    <p class="left fragment fade-up">Bugs are everywhere, even in React</p>
+    <p class="left fragment fade-up">Fixing bugs in the 3rd party libraries is hard</p>
+    <p class="left fragment fade-up"><u>The solution</u>: always check project's maintainability first</p>
+
+  </section>
+
+  <section>
+    <h3>
+      Security risks
+    </h3>
+
+    <p class="left fragment fade-up">Any piece of 3rd party code brings security risks</p>
+    <p class="left fragment fade-up">Not only direct dependency might be vulnerable</p>
+    <p class="left fragment fade-up"><u>The solution</u>: carefully monitor security notifications and use only wide
+      known solutions</p>
+  </section>
+
+  <section>
+
+    <h3>Use this in your CD/CD pipeline</h3>
+    <pre>
+      <code>
+        npm audit 
+      </code>
+    </pre>
+
+  </section>
+
+
+  <section>
+    <h3>Discontinuation</h3>
+
+    <p class="left fragment fade-up">Any project is a subject to be abandoned</p>
+    <p class="left fragment fade-up">Abandoned project means security risks, not fixed bugs, no support for the next
+      versions</p>
+    <p class="left fragment fade-up"><u>The solution</u>: find that lib that will abandoned after ending your own
+      project</p>
+  </section>
+
+  <section>
+    <h3>Size</h3>
+
+    <p class="left fragment fade-up">You are limited with the size of the javascript bundle</p>
+    <p class="left fragment fade-up">The recommended size for today is around 350kB</p>
+    <p class="left fragment fade-up"><u>The solution</u>: Select carefully and don't forget about <a
+        rel="noreferrer noopener" href="https://webpack.js.org/guides/tree-shaking/">tree-shaking</a> </p>
+
+  </section>
+
+  <section>
+    <h3>So much cons...</h3>
+
+    <p>It's not possible to write everything by your own, but the option you pick should be measured</p>
   </section>
 
 </section>
@@ -50,14 +96,15 @@
   <section>
     <h3>Gather crucial requirements</h3>
 
-    <p class="left">No reason to use Material UI if your styles not "materials"</p>
-    <p class="left">No reason to use UI library if you need responsiveness and lib doesn't support it</p>
+    <p class="left fragment fade-up">No reason to use Material UI if your styles not "materials"</p>
+    <p class="left fragment fade-up">No reason to use UI library if you need responsiveness and lib doesn't support it
+    </p>
   </section>
 
   <section>
     <h3>Collect options</h3>
 
-    <p>Collect at least 3 libraries that fits your requirements</p>
+    <p>Collect 2-3 libraries that fits your requirements</p>
   </section>
 
   <section>
@@ -86,32 +133,37 @@
   </section>
 
   <section>
-    <h3>Pick the best one and to PoC with it</h3>
+    <h3>Pick the best one and do simple PoC</h3>
 
     <p class="left">
-      Don't waste much time with PoC - check only critical requirements
+      Don't waste much time with PoC - check only critical requirements and the points you are unsure with
     </p>
 
-    <p class="left">
-      No reason to use select without async search when this is a must
-    </p>
   </section>
 
   <section>
-    <h3>Some examples</h3>
+    <h3>Last but not least - developer experience</h3>
 
-    <ul>
-      <li><a rel="noreferrer noopener" href="https://github.com/mui/material-ui">Material UI</a> ⭐77.6k, downloads -
-        994k , size - 458.2kB,
-        tree-shakeable </li>
-      <li class="fragment fade-up"><a rel="noreferrer noopener" href="https://github.com/ant-design/ant-design/">Ant
-          design </a> ⭐79.6k, downloads
-        - 745k, size - 1.2mB, tree-shakable</li>
-      <li class="fragment fade-up"><a rel="noreferrer noopener"
-          href="https://github.com/react-bootstrap/react-bootstrap">React Bootstrap </a>
-        ⭐20k, 861k downloads, 112kb tree-shakeable</li>
-    </ul>
+    <p class="left">It should be comfortable to work with the code</p>
   </section>
+
+
+</section>
+
+<section>
+  <h2>Examples</h2>
+
+  <ul>
+    <li><a rel="noreferrer noopener" href="https://github.com/mui/material-ui">Material UI</a> ⭐77.6k, downloads -
+      994k , size - 458.2kB,
+      tree-shakeable </li>
+    <li class="fragment fade-up"><a rel="noreferrer noopener" href="https://github.com/ant-design/ant-design/">Ant
+        design </a> ⭐79.6k, downloads
+      - 745k, size - 1.2mB, tree-shakable</li>
+    <li class="fragment fade-up"><a rel="noreferrer noopener"
+        href="https://github.com/react-bootstrap/react-bootstrap">React Bootstrap </a>
+      ⭐20k, 861k downloads, 112kb tree-shakeable</li>
+  </ul>
 </section>
 
 <section>
@@ -149,7 +201,7 @@
 
     <p class="left">This mean 4 predefined points - 4em, or 4px, or 4xWhatEver you need</p>
 
-    <p class="left">This keeps your UI consistent</p>
+    <p class="left fragment fade-up">This keeps your UI consistent</p>
   </section>
 
   <section>
@@ -195,5 +247,11 @@
       <li>...</li>
     </ul>
   </section>
+У
+</section>
 
+<section>
+  <h2>
+    A library is always a some kind of trade-off. You need to know what you will get and how much you will pay
+  </h2>
 </section>
