Small fixes to the ui-lib talk

--- a/presentations/react-ui-lib/body.html
+++ b/presentations/react-ui-lib/body.html
@@ -7,14 +7,14 @@
     <h3>Speed up the development</h3>
 
     <p class="left">Ui libraries provide you with good set of already working components</p>
-    <p class="left">It's much faster to <i>npm i</i> then code, code, code</p>
+    <p class="left fragment fade-up">It's much faster to <i>npm i</i> then code, code, code</p>
   </section>
 
   <section>
     <h3>Cover edge cases</h3>
 
     <p class="left">Good ui libraries already faced tricky cases like accessibility, performance, etc</p>
-    <p class="left">
+    <p class="left fragment fade-up">
       If bug not exists, you will not need to fix it
     </p>
   </section>
@@ -275,7 +275,6 @@
       <li>...</li>
     </ul>
   </section>
-  У
 </section>
 
 <section>
