--- a/presentations/react-ui-lib/index.html
+++ b/presentations/react-ui-lib/index.html
@@ -50,6 +50,7 @@
           <h2>Key Points</h2>
           <ul>
             <li class="fragment fade-up">Purpose</li>
+            <li class="fragment fade-up">Cons</li>
             <li class="fragment fade-up">How to choose</li>
             <li class="fragment fade-up">Material UI</li>
           </ul>
