Final polish for the ui-lib talk

--- a/presentations/react-ui-lib/body.html
+++ b/presentations/react-ui-lib/body.html
@@ -113,59 +113,42 @@
   </section>
 
   <section>
-    <h3>Gather crucial requirements</h3>
+    <h3>Gather functional and non-functional requirements</h3>
 
-    <p class="left fragment fade-up">No reason to use Material UI if your styles not "materials"</p>
-    <p class="left fragment fade-up">No reason to use UI library if you need responsiveness and lib doesn't support it
+    <p class="left fragment fade-up">Functional: Select with back-end search</p>
+    <p class="left fragment fade-up">Non-Functional: Responsive select</p>
+
+  </section>
+
+  <section>
+    <h3>Collect the libraries that satisfy requirements</h3>
+  </section>
+
+  <section>
+    <h3>Filter the list by</h3>
+
+    <p class="left fragment fade-up">Known - at least 1000 stars</p>
+    <p class="left fragment fade-up">Alive and maintained - last commits in the previous month</p>
+    <p class="left fragment fade-up">Secure - no known vulnerabilities in prod dependencies</p>
+
+  </section>
+
+  <section>
+    <h3>Pick the best one and do simple a PoC</h3>
+
+    <p class="left fragment fade-up">
+      Don't waste much time with PoC - check only critical requirements and the points you are unsure with
     </p>
+
+    <p class="left fragment fade-up">Pay attention to the developer experience and bundle size</p>
   </section>
 
-
-
-  <section>
-    <h3>Most important aspects</h3>
-
-    <ul>
-      <li>It should be alive - eg some commits done during the previous month</li>
-      <li class="fragment fade-up">It should be well-known - at least 1000 stars, more is betters</li>
-    </ul>
-  </section>
-
-  <section>
-    <h3>Nice to have aspects</h3>
-
-    <ul>
-      <li>Small size or tree shaking</li>
-      <li class="fragment fade-up">Small amount of opened issues</li>
-    </ul>
-  </section>
 
   <section>
     <h3>Bundlephobia</h3>
 
     <p class="left"><a rel="noreferrer noopener" href="https://bundlephobia.com/">Bundlephobia</a> - great tool to check
       how much your package will affect the final bundle</p>
-  </section>
-
-  <section>
-    <h3>Last but not least - developer experience</h3>
-
-    <p class="left">It should be comfortable to work with the code</p>
-  </section>
-
-  <section>
-    <h3>Collect options</h3>
-
-    <p>Collect 2-3 libraries that fits your requirements</p>
-  </section>
-
-  <section>
-    <h3>Pick the best one and do simple PoC</h3>
-
-    <p class="left">
-      Don't waste much time with PoC - check only critical requirements and the points you are unsure with
-    </p>
-
   </section>
 
 </section>
@@ -275,4 +258,3 @@
     </ul>
   </section>
 </section>
-
