--- a/presentations/react-router/index.html
+++ b/presentations/react-router/index.html
@@ -59,6 +59,14 @@
 
         <include src="./react-router/body.html"></include>
 
+        <section>
+          <h2>Takeaway</h2>
+          <ul >
+            <li class="fragment fade-up">SPA - is a web application or website that interacts with the user by dynamically rewriting the current web page with new data</li>
+            <li class="fragment fade-up">In React we are using React Router to build SPA</li>
+            <li class="fragment fade-up">React router supports a lot of handy options - params, nested view, default routes</li>
+          </ul>
+        </section>
 
         <section>
           <h2>Home task</h2>
