Added super draft fot the workshop about pet projects

--- a/presentations/pet-project/body.html
+++ b/presentations/pet-project/body.html
@@ -1,7 +1,22 @@
-
 <section>
   <section>
     <h2>What is a Pet Project</h2>
+  </section>
+
+  <section>
+    <h3>What is the main difference between Pet and Learning Project?</h3>
+  </section>
+
+  <section>
+    <h3>Main goal for a learning project - is to genereate some knowledge</h3>
+  </section>
+
+  <section>
+    <h3>Main goal for a pet project - is to be released</h3>
+  </section>
+
+  <section>
+    <h3>Considering Pet project - always think about the release</h3>
   </section>
 </section>
 
@@ -9,16 +24,69 @@
   <section>
     <h2>Hot to pick a theme</h2>
   </section>
+
+  <section>
+    <h3>Good theme is super important</h3>
+    <p>
+      The good theme will suport you during the development and attract other people after the
+      release
+    </p>
+  </section>
+
+  <section>
+    <h3>I know two options to pick a good theme</h3>
+  </section>
+
+  <section>
+    <h3>Joy themes</h3>
+  </section>
+
+  <section>
+    <h3>Pain themes</h3>
+  </section>
 </section>
 
 <section>
   <section>
     <h2>Planing</h2>
   </section>
+
+  <section>
+    <h3>When doing pet project you will not have much time for a detailed planning</h3>
+  </section>
+
+  <section>
+    <ul>
+      <li>Set one (maximum two) goals</li>
+      <li class="fragment fade-up">Note nice to have features somewhere just not to forget</li>
+      <li class="fragment fade-up">
+        Categorize all work as must have (the solution is usesless without such features) and nice
+        to have
+      </li>
+      <li class="fragment fade-up">Implement <strong>only</strong> must have features</li>
+    </ul>
+  </section>
 </section>
 
 <section>
   <section>
     <h2>Pitfalls</h2>
+  </section>
+
+  <section>
+    <h3>Underestimates</h3>
+
+    <p>The first pet project should be something around two weeks 2 hours each day of work</p>
+  </section>
+
+  <section>
+    <h3>Adding non crucial features</h3>
+
+    <p>Implement only that features that absolutely needed for the project</p>
+  </section>
+
+  <section>
+    <h3>Pausing</h3>
+    <p>Better to work 2 hours each day rather than 6 -> 4 -> 2 -> 1 -> 0 -> 1 -> 0 -> 0</p>
   </section>
 </section>
