--- a/presentations/pet-project/index.html
+++ b/presentations/pet-project/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React For Beginners - Pet project - How to</title>
-    <meta name="description" content="Free learning course - React: Pet project - How to" />
+    <title>React For Beginners - How to: Pet Project</title>
+    <meta name="description" content="Free learning course - React: How to: Pet Project" />
     <meta name="keywords" content="react free learning course beginners" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="React For Beginners - Pet project - How to" />
+    <meta name="twitter:title" content="React For Beginners - How to: Pet Project" />
     <meta
       name="twitter:site"
       content="https://github.com/Drag13/react-learning-course-short/pet-project/index.html"
@@ -17,11 +17,11 @@
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
-    <meta property="og:title" content="React For Beginners - Pet project - How to" />
-    <meta name="og:site_name" content="React For Beginners - Pet project - How to" />
+    <meta property="og:title" content="React For Beginners - How to: Pet Project" />
+    <meta name="og:site_name" content="React For Beginners - How to: Pet Project" />
     <meta property="og:url" content="https://drag13.io/react-learning-course-short/pet-project/index.htnl" />
     <meta property="og:type" content="website" />
-    <meta name="application-name" content="React For Beginners - Pet project - How to" />
+    <meta name="application-name" content="React For Beginners - How to: Pet Project" />
     <meta name="author" content="drag13" />
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
@@ -40,7 +40,7 @@
         </section>
 
         <section>
-          <h1>L13 - Pet project - How to</h1>
+          <h1>L13 - How to: Pet Project</h1>
           <h4>
             <u> React For Beginners by Itera </u>
           </h4>
