WIP pet project

--- a/presentations/pet-project/index.html
+++ b/presentations/pet-project/index.html
@@ -40,9 +40,9 @@
         </section>
 
         <section>
-          <h1>L13 - How to: Pet Project</h1>
+          <h1>Pet Project - For Fun and Profit</h1>
           <h4>
-            <u> React For Beginners by Itera </u>
+            <u> For Beginners by Itera </u>
           </h4>
         </section>
 
@@ -52,6 +52,7 @@
             <li class="fragment fade-up">What is a Pet Project</li>
             <li class="fragment fade-up">Hot to pick a theme</li>
             <li class="fragment fade-up">Planing</li>
+            <li class="fragment fade-up">Time management tips</li>
             <li class="fragment fade-up">Pitfalls</li>
           </ul>
         </section>
@@ -61,11 +62,11 @@
         <section>
           <h2>Takeaway</h2>
           <ul >
+            <li class="fragment fade-up">Pet project is a great thing, but it requires efforts from your side</li>
             <li class="fragment fade-up">Pet project = release</li>
             <li class="fragment fade-up">For the first project - not more than 16 hours of work</li>
             <li class="fragment fade-up">For the first release - only must have features</li>
             <li class="fragment fade-up">Plan to work day by day</li>
-            <li class="fragment fade-up">Know you serlf</li>
           </ul>
         </section>
 
