--- a/presentations/pet-project/body.html
+++ b/presentations/pet-project/body.html
@@ -1,5 +1,22 @@
 <section>
   <section>
+    <h2>Part of my projects</h2>
+  </section>
+
+  <section>
+    <img src="./img/projects.png" alt="" />
+  </section>
+  <section>
+    <img src="./img/angularwebtemplate.png" alt="" />
+  </section>
+
+  <section>
+    <h3>And much, much more <strong> completely failed </strong></h3>
+  </section>
+</section>
+
+<section>
+  <section>
     <h2>What is a Pet Project</h2>
   </section>
 
@@ -28,27 +45,39 @@
   <section>
     <h3>Good theme is super important</h3>
     <p>
-      The good theme will suport you during the development and attract other people after the
+      The good theme will support you during the development and attract other people after the
       release
     </p>
   </section>
 
   <section>
-    <h3>I know two options to pick a good theme</h3>
+    <h3>Never pick a PetProject that doesn't resonate with your heart</h3>
   </section>
 
   <section>
-    <h3>Joy themes</h3>
+    <h3>Two ways to pick a good theme</h3>
   </section>
 
   <section>
-    <h3>Pain themes</h3>
+    <h3>Something fun</h3>
+  </section>
+
+  <section>
+    <h3>Something painful</h3>
+  </section>
+
+  <section>
+    <h3>Example - the Shooter Log</h3>
   </section>
 </section>
 
 <section>
   <section>
     <h2>Planing</h2>
+  </section>
+
+  <section>
+    <h3>Pet project is a race against yourself - until you get bored and tired</h3>
   </section>
 
   <section>
@@ -60,11 +89,43 @@
       <li>Set one (maximum two) goals</li>
       <li class="fragment fade-up">Note nice to have features somewhere just not to forget</li>
       <li class="fragment fade-up">
-        Categorize all work as must have (the solution is usesless without such features) and nice
-        to have
+        Categorize all work as must have (the solution is useless without such features) and nice to
+        have
       </li>
       <li class="fragment fade-up">Implement <strong>only</strong> must have features</li>
     </ul>
+  </section>
+
+  <section>
+    <h3>For the first 2-3 projects</h3>
+
+    <ul>
+      <li>Not more than 16-20 hours</li>
+      <li>Not more than 2-3 weeks</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3>Remember - something unplanned will happen, be prepared to X3 time</h3>
+  </section>
+</section>
+
+<section>
+  <section><h2>Time management tips</h2></section>
+  <section>
+    <h3>Set aside some dedicated time for your project</h3>
+    <p>Pet project is not something unserious</p>
+  </section>
+
+  <section>
+    <h3>Work on a regular basis</h3>
+
+    <p>Better to work 2 hours every day, rather than 6 -> 2 -> 0</p>
+  </section>
+
+  <section>
+    <h3>Focus on a one task at a time</h3>
+    <p>Define -> Code -> Commit -> Relax</p>
   </section>
 </section>
 
@@ -76,17 +137,28 @@
   <section>
     <h3>Underestimates</h3>
 
-    <p>The first pet project should be something around two weeks 2 hours each day of work</p>
+    <p>Don't try to create a new FaceBook (at least from the first attempt)</p>
   </section>
 
   <section>
-    <h3>Adding non crucial features</h3>
+    <h3>Avoid adding non crucial features</h3>
 
     <p>Implement only that features that absolutely needed for the project</p>
   </section>
 
   <section>
+    <h3>Minimize infrastructure work</h3>
+    <p>For the small projects, hard automatization takes more time than actually coding</p>
+    <p>Release should be you primary focus</p>
+  </section>
+
+  <section>
     <h3>Pausing</h3>
-    <p>Better to work 2 hours each day rather than 6 -> 4 -> 2 -> 1 -> 0 -> 1 -> 0 -> 0</p>
+    <p>Work regularly and avoid pause</p>
+  </section>
+
+  <section>
+    <h3>Turn it into work</h3>
+    <p>Pet project HAVE to be fun, it should makes you proud and happy</p>
   </section>
 </section>
