--- a/presentations/pet-project/body.html
+++ b/presentations/pet-project/body.html
@@ -13,6 +13,10 @@
   <section>
     <h3>And much, much more <strong> completely failed </strong></h3>
   </section>
+
+  <section>
+    <h3>Don't be afraid of failure - it's natural part of the success</h3>
+  </section>
 </section>
 
 <section>
