Minor tweaks for the talk about pet project

--- a/presentations/pet-project/body.html
+++ b/presentations/pet-project/body.html
@@ -29,11 +29,15 @@
   </section>
 
   <section>
-    <h3>Main goal for a learning project - is to genereate some knowledge</h3>
+    <h3>Main goal for a learning project - is to generate some knowledge</h3>
   </section>
 
   <section>
-    <h3>Main goal for a pet project - is to be released</h3>
+    <h3>Main goal for a pet project - is to be fun <span class="fragment fade-up">?</span></h3>
+  </section>
+
+  <section>
+    <h3>To me - main goal for a pet project - is to be both fun and <u>released</u></h3>
   </section>
 
   <section>
@@ -164,5 +168,24 @@
   <section>
     <h3>Turn it into work</h3>
     <p>Pet project HAVE to be fun, it should makes you proud and happy</p>
+  </section>
+</section>
+
+<section>
+  <section>
+    <h2>What about:</h2>
+  </section>
+
+  <section>
+    <h3>Team work</h3>
+    <p>The same except each new teammate increase general velocity for 0.8 then previous</p>
+  </section>
+
+  <section>
+    <h3>Things after release</h3>
+    <p>
+      Don't be shy to promote your project. You will gain extra experience, your first users and,
+      might be even become a unicorn!
+    </p>
   </section>
 </section>
