Added slides  about myself

--- a/presentations/pet-project/body.html
+++ b/presentations/pet-project/body.html
@@ -1,5 +1,29 @@
 <section>
   <section>
+    <h2>About me</h2>
+    <ul>
+      <li>Vitalii Ruban</li>
+      <li class="fragment fade-up">
+        Head of Front-End department in <a target="_blank" href="https://www.itera.com/">Itera</a>
+      </li>
+      <li class="fragment fade-up">
+        Member of the program committee
+        <a target="_blank" rel="noopener noreferrer" href="https://jsfest.com">JsFest Ukraine </a>
+      </li>
+      <li class="fragment fade-up">Love #webperf and #websec</li>
+      <li class="fragment fade-up">
+        <a
+          target="_blank"
+          rel="noreferrer noopener"
+          href="https://www.linkedin.com/in/vitalii-ruban/"
+          >LinkedIn</a
+        >,
+        <a rel="noreferrer noopener" href="https://twitter.com/drag137">Twitter</a>
+      </li>
+    </ul>
+  </section>
+
+  <section>
     <h2>Part of my projects</h2>
   </section>
 
