--- a/presentations/pet-project/body.html
+++ b/presentations/pet-project/body.html
@@ -28,10 +28,22 @@
   </section>
 
   <section>
-    <img src="./img/projects.png" alt="" />
-  </section>
-  <section>
-    <img src="./img/angularwebtemplate.png" alt="" />
+    <ul>
+      <li class="fragment">
+        NPM project - <a href="https://github.com/Drag13/IsNumberStrict"> IsNumberStrict</a>
+        <img src="https://img.shields.io/npm/dt/is-number-strict" />
+      </li>
+      <li class="fragment">
+        Chrome Extension -
+        <a href="https://github.com/Drag13/HabrSanitizer"
+          >HabroSanitizer
+          <img src="https://img.shields.io/amo/rating/habrosanitizer?label=Mozilla%20Rating" />
+          <img src="https://img.shields.io/amo/rating/habrosanitizer?label=Mozilla%20Rating" />
+        </a>
+      </li>
+
+      <li class="fragment">Visual Studio Extension - Angular 2 Web template - 30k downloads</li>
+    </ul>
   </section>
 
   <section>
@@ -119,12 +131,12 @@
   <section>
     <ul>
       <li>Set one (maximum two) goals</li>
-      <li class="fragment fade-up">Note nice to have features somewhere just not to forget</li>
       <li class="fragment fade-up">
         Categorize all work as must have (the solution is useless without such features) and nice to
         have
       </li>
       <li class="fragment fade-up">Implement <strong>only</strong> must have features</li>
+      <li class="fragment fade-up">Note nice to have features somewhere just not to forget</li>
     </ul>
   </section>
 
@@ -175,7 +187,7 @@
   <section>
     <h3>Avoid adding non crucial features</h3>
 
-    <p>Implement only that features that absolutely needed for the project</p>
+    <p>Implement only the features that are absolutely needed for the project</p>
   </section>
 
   <section>
@@ -198,6 +210,14 @@
 <section>
   <section>
     <h2>What about:</h2>
+  </section>
+
+  <section>
+    <h3>Demo project</h3>
+    <p>
+      A demo project is something that should demonstrates your skills. It should not be fun or
+      released. Just show how good you are
+    </p>
   </section>
 
   <section>
