--- a/presentations/pet-project/body.html
+++ b/presentations/pet-project/body.html
@@ -25,15 +25,13 @@
 
   <section>
     <h2>Part of my projects</h2>
-  </section>
 
-  <section>
     <ul>
-      <li class="fragment">
+      <li class="fragment fade-up">
         NPM project - <a href="https://github.com/Drag13/IsNumberStrict"> IsNumberStrict</a>
         <img src="https://img.shields.io/npm/dt/is-number-strict" />
       </li>
-      <li class="fragment">
+      <li class="fragment fade-up">
         Chrome Extension -
         <a href="https://github.com/Drag13/HabrSanitizer"
           >HabroSanitizer
@@ -42,16 +40,15 @@
         </a>
       </li>
 
-      <li class="fragment">Visual Studio Extension - Angular 2 Web template - 30k downloads</li>
+      <li class="fragment fade-up">
+        Visual Studio Extension - Angular 2 Web template - 30k downloads
+      </li>
+      <li class="fragment fade-up">And others ...</li>
     </ul>
   </section>
 
   <section>
-    <h3>And much, much more <strong> completely failed </strong></h3>
-  </section>
-
-  <section>
-    <h3>Don't be afraid of failure - it's natural part of the success</h3>
+    <h3>However - much more of them was completely failed</h3>
   </section>
 </section>
 
@@ -78,6 +75,14 @@
 
   <section>
     <h3>Considering Pet project - always think about the release</h3>
+  </section>
+
+  <section>
+    <h3>And what about the demo project?</h3>
+    <p>
+      A demo project is something that should demonstrates your skills. It should not be fun or
+      released. Just show how good you are.
+    </p>
   </section>
 </section>
 
@@ -202,6 +207,13 @@
   </section>
 
   <section>
+    <h3>Abandoning</h3>
+    <p>Abandoning project might lead you to the lack of self-esteem</p>
+    <p>Thus, first project better to be small and 99% doable</p>
+
+  </section>
+
+  <section>
     <h3>Turn it into work</h3>
     <p>Pet project HAVE to be fun, it should makes you proud and happy</p>
   </section>
@@ -210,14 +222,6 @@
 <section>
   <section>
     <h2>What about:</h2>
-  </section>
-
-  <section>
-    <h3>Demo project</h3>
-    <p>
-      A demo project is something that should demonstrates your skills. It should not be fun or
-      released. Just show how good you are
-    </p>
   </section>
 
   <section>
