--- a/presentations/pet-project/index.html
+++ b/presentations/pet-project/index.html
@@ -42,7 +42,7 @@
         <section>
           <h1>Pet Project - For Fun and Profit</h1>
           <h4>
-            <u> For Beginners by Itera </u>
+            <u> For Beginners by <a href="https://itera.com/">Itera</a>  </u>
           </h4>
         </section>
 
