--- a/presentations/pet-project/index.html
+++ b/presentations/pet-project/index.html
@@ -5,23 +5,23 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React For Beginners - {{title}}</title>
-    <meta name="description" content="Free learning course - React: {{title}}" />
+    <title>React For Beginners - How to: Pet Project</title>
+    <meta name="description" content="Free learning course - React: How to: Pet Project" />
     <meta name="keywords" content="react free learning course beginners" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="React For Beginners - {{title}}" />
+    <meta name="twitter:title" content="React For Beginners - How to: Pet Project" />
     <meta
       name="twitter:site"
-      content="https://github.com/Drag13/react-learning-course-short/{{name}}/index.html"
+      content="https://github.com/Drag13/react-learning-course-short/pet-project/index.html"
     />
     <meta name="twitter:creator" content="@drag137" />
     <meta name="twitter:image" content="../shared/imgs/title.png" />
     <meta property="og:image" content="../shared/imgs/title.png" />
-    <meta property="og:title" content="React For Beginners - {{title}}" />
-    <meta name="og:site_name" content="React For Beginners - {{title}}" />
-    <meta property="og:url" content="https://drag13.io/react-learning-course-short/{{name}}/index.htnl" />
+    <meta property="og:title" content="React For Beginners - How to: Pet Project" />
+    <meta name="og:site_name" content="React For Beginners - How to: Pet Project" />
+    <meta property="og:url" content="https://drag13.io/react-learning-course-short/pet-project/index.htnl" />
     <meta property="og:type" content="website" />
-    <meta name="application-name" content="React For Beginners - {{title}}" />
+    <meta name="application-name" content="React For Beginners - How to: Pet Project" />
     <meta name="author" content="drag13" />
     <meta name="robots" content="index follow" />
     <link rel="stylesheet" href="/node_modules/reveal.js/dist/reveal.css" />
@@ -40,57 +40,37 @@
         </section>
 
         <section>
-          <h1>L{{i}} - {{title}}</h1>
+          <h1>Pet Project - For Fun and Profit</h1>
           <h4>
-            <u> React For Beginners by <a href="https://itera.com/">Itera</a>  </u>
+            <u> For Beginners by <a href="https://itera.com/">Itera</a>  </u>
           </h4>
         </section>
 
-        {{#keyPoints.length}}
         <section>
           <h2>Key Points</h2>
           <ul>
-            {{#keyPoints}}
-            <li class="fragment fade-up">{{{.}}}</li>
-            {{/keyPoints}}
+            <li class="fragment fade-up">What is a Pet Project</li>
+            <li class="fragment fade-up">Hot to pick a theme</li>
+            <li class="fragment fade-up">Planing</li>
+            <li class="fragment fade-up">Time management tips</li>
+            <li class="fragment fade-up">Pitfalls</li>
           </ul>
         </section>
-        {{/keyPoints.length}}
 
-        <include src="./{{name}}/body.html"></include>
+        <include src="./pet-project/body.html"></include>
 
-        {{#takeaways.length}}
         <section>
           <h2>Takeaway</h2>
           <ul >
-            {{#takeaways}}
-            <li class="fragment fade-up">{{{.}}}</li>
-            {{/takeaways}}
+            <li class="fragment fade-up">Pet project is a great thing, but it requires efforts from your side</li>
+            <li class="fragment fade-up">Pet project = release</li>
+            <li class="fragment fade-up">For the first project - not more than 16 hours of work</li>
+            <li class="fragment fade-up">For the first release - only must have features</li>
+            <li class="fragment fade-up">Plan to work day by day</li>
           </ul>
         </section>
-        {{/takeaways.length}} 
 
-        {{#hometask.length}}
-        <section>
-          <h2>Home task</h2>
-          <ul>
-            {{#hometask}}
-            <li>{{{.}}}</li>
-            {{/hometask}}
-          </ul>
-        </section>
-        {{/hometask.length}} 
         
-        {{#links.length}}
-        <section>
-          <h2>Useful links</h2>
-          <ul>
-            {{#links}}
-            <li><a target="_blank" rel="noreferrer noopener" href="{{{1}}}">{{0}}</a></li>
-            {{/links}}
-          </ul>
-        </section>
-        {{/links.length}}
         
       <section>
         <h2>Join me</h2>
