Web Tools talk improvements

--- a/presentations/web-tools/body.html
+++ b/presentations/web-tools/body.html
@@ -155,6 +155,15 @@ npx husky install</code></pre>
 }
   </code></pre>
   </section>
+
+  <section>
+    <h3>Warning</h3>
+
+    <p>
+      Big amount of tasks might negatively impact developer experience. To avoid this - add task one
+      by one and consult with the team
+    </p>
+  </section>
 </section>
 
 <section>
