--- a/presentations/web-tools/index.html
+++ b/presentations/web-tools/index.html
@@ -61,6 +61,15 @@
 
 
         
+        <section>
+          <h2>Useful links</h2>
+          <ul>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://eslint.org/docs/latest/rules/">EsLint</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://prettier.io/">Prettier</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://laurieontech.com/posts/husky/">Husky and lint-staged</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://docs.emmet.io/abbreviations/syntax/">Emmet</a></li>
+          </ul>
+        </section>
         
       <section>
         <h2>Join me</h2>
