--- a/presentations/web-tools/index.html
+++ b/presentations/web-tools/index.html
@@ -51,7 +51,6 @@
           <ul>
             <li class="fragment fade-up">EsLint</li>
             <li class="fragment fade-up">Prettier</li>
-            <li class="fragment fade-up">Code Spell Checker</li>
             <li class="fragment fade-up">Husky</li>
             <li class="fragment fade-up">Code Snippets</li>
           </ul>
@@ -68,6 +67,7 @@
             <li><a target="_blank" rel="noreferrer noopener" href="https://prettier.io/">Prettier</a></li>
             <li><a target="_blank" rel="noreferrer noopener" href="https://laurieontech.com/posts/husky/">Husky and lint-staged</a></li>
             <li><a target="_blank" rel="noreferrer noopener" href="https://docs.emmet.io/abbreviations/syntax/">Emmet</a></li>
+            <li><a target="_blank" rel="noreferrer noopener" href="https://code.visualstudio.com/docs/editor/userdefinedsnippets">Code Snippets</a></li>
           </ul>
         </section>
         
